# open-mad

./: .env.example  .gitignore  Cargo.toml  README.md
crates/mad-cli/: Cargo.toml
crates/mad-cli/src/: main.rs
crates/mad-core/: Cargo.toml
crates/mad-core/src/: accessibility.rs  ai.rs  input.rs  lib.rs  screen.rs  types.rs
crates/mad-server/: Cargo.toml
crates/mad-server/src/: config.rs  lib.rs  main.rs  memory.rs  models.rs  state.rs
crates/mad-server/src/api/: chat.rs  mod.rs  screenshot.rs
crates/mad-skills/: Cargo.toml
crates/mad-skills/src/: lib.rs  registry.rs
crates/mad-skills/src/actions/: desktop.rs
crates/mad-ui/: Cargo.toml  Dioxus.toml  input.css
crates/mad-ui/assets/: icon.icns  style.css
crates/mad-ui/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
