[workspace]
members = [
    "crates/mad-core",
    "crates/mad-server",
    "crates/mad-ui",
    "crates/mad-cli",
    "xtask", "crates/mad-skills",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["liwis"]

[workspace.dependencies]
mad-core = { path = "crates/mad-core" }
mad-skills = { path = "crates/mad-skills" }
mad-server = { path = "crates/mad-server"}
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.13", features = ["json", "multipart", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
image = "0.25"
dotenvy = "0.15"
dioxus = { version = "0.7", features = ["desktop"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
base64 = "0.22"
screenshots = "0.8"
enigo = "0.6"
chrono = "0.4"
tray-icon = "0.21"
muda = "0.17"
tao = "0.34"
gloo-net = "0.6"
futures = "0.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.5"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
uuid = { version = "1.0", features = ["v4", "js"] }
console_error_panic_hook = "0.1"
