[package]
name = "mad-cli"
version.workspace = true
edition.workspace = true

[dependencies]
mad-server = { workspace = true }
mad-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
