[package]
name = "mad-server"
version.workspace = true
edition.workspace = true

[dependencies]
mad-core = { workspace = true }
mad-skills = { workspace = true }
axum = { version = "0.8", features = ["macros"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
base64 = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
toml = "0.9"
dirs = "6.0"
candle-core = "0.9.0"
candle-nn = "0.9.0"
candle-transformers = "0.9.0"
tokenizers = "0.22.0"
hf-hub = "0.5.0"
chrono = { workspace = true, features = ["serde"] }
