[package]
name = "mad-skills"
version.workspace = true
edition.workspace = true

[dependencies]
mad-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
thiserror = "2.0"
schemars = "1.2" # For generating JSON schema for tool descriptions
tokio = { workspace = true }
