[package]
name = "mad-ui"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
lucide-dioxus = { version = "2.576", features = ["all-icons"] }
tokio = { workspace = true }
mad-server = { workspace = true }
